--- a/www/index.html
+++ b/www/index.html
@@ -19,11 +19,12 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" ng-strict-di="true">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
