controllers: make it modular

--- a/www/index.html
+++ b/www/index.html
@@ -22,9 +22,10 @@
     <script src="js/index.js"></script>
     <script src="js/config.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/user-list-ctrl.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter" ng-strict-di="true">
+  <body ng-app="starter">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
