app: fix mpdules and seprate the controllers

--- a/www/index.html
+++ b/www/index.html
@@ -21,11 +21,11 @@
     <!-- your app's js -->
     <script src="js/index.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/user-list-ctrl.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/pages/index.js"></script>
+    <script src="js/pages/user-list-ctrl.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="AbsenceChecker">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
