--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     <script src="js/pages/index.js"></script>
     <script src="js/pages/user-list-ctrl.js"></script>
   </head>
-  <body ng-app="AbsenceChecker">
+  <body ng-app="AbsenceChecker" ng-strict-di>
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
