--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,9 @@
     <script src="js/config.js"></script>
     <script src="js/services.js"></script>
     <script src="js/pages/index.js"></script>
-    <script src="js/pages/user-list-ctrl.js"></script>
+    <script src="js/pages/userlist.js"></script>
   </head>
-  <body ng-app="AbsenceChecker" ng-strict-di>
+  <body ng-app="AbsenceChecker" ng-strict-di="true">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
